[gd_scene load_steps=2 format=2]

[ext_resource path="res://MixerWindow.gd" type="Script" id=1]

[node name="MixerWindow" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorMixer" type="Sprite" parent="."]
position = Vector2( 32, 32 )
centered = false

[node name="FillPreview" type="Sprite" parent="."]
position = Vector2( 600, 240 )
centered = false

[node name="ColorPicker" type="ColorPicker" parent="."]
margin_left = 700.0
margin_top = 52.0135
margin_right = 1001.04
margin_bottom = 514.014
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorSelections" type="GridContainer" parent="."]
margin_left = 600.0
margin_top = 32.0
margin_right = 690.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenerateSample" type="Button" parent="."]
margin_left = 600.0
margin_top = 450.0
margin_right = 671.0
margin_bottom = 470.0
text = "Generate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveFile" type="Button" parent="."]
margin_left = 600.0
margin_top = 490.0
margin_right = 671.0
margin_bottom = 470.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="color_changed" from="ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="pressed" from="GenerateSample" to="." method="_on_GenerateSample_pressed"]
[connection signal="pressed" from="SaveFile" to="." method="_on_SaveFile_pressed"]
